@@ -1,5 +1,6 @@
 
 
+	* added missing functions to python binding related to torrent creation
 	* fixed to add filename on web seed urls that lack it
 	* fixed BOOST_ASIO_HASH_MAP_BUCKETS define for boost 1.39
 
